[project]
name = "Imagination"
version = "3.4.5"
description = "Depedency Injection Framework"
authors = [
    {name = "Juti Noppornpitak", email = "juti_n@yahoo.co.jp"}
]
requires-python = ">=3.9"
dependencies = ["kotoba"]
readme = 'README.md'
license = 'Apache-2.0'
license-files = ["LICEN[CS]E"]

[project.optional-dependencies]
build = ["setuptools"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imagination", "imagination.assembler", "imagination.decorator", "imagination.helper", "imagination.meta"]
exclude = ["test", "docs"]
