[metadata]
name = imagination
version = 3.3.1
description = "Library for Automatic Dependency Injection"
author = Juti Noppornpitak
author_email = juti@shiroyuki.com
license = MIT
long_description = "GA4GH API client and command line tool. Please check out [the documentation](https://docs.viral.ai/analysis) for more details."
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =
	kotoba
