[metadata]
name = imagination
version = 3.4.0a
description = Dependency Injection Framework
author = Juti Noppornpitak
author_email = juti@shiroyuki.com
license = Apache 2.0
long_description = A framework to enable automatic dependency injection, inspired by Java Beans
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
	kotoba
